kubernetes-manifests-infra/prometheus/blackbox-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: prometheus
  labels:
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "blackbox-exporter"
spec:
  ports:
    - name: http
      port: 9115
      protocol: TCP
      targetPort: 9115
  selector:
    k8s-app: blackbox-exporter
  type: "ClusterIP"
