kubernetes-manifests-infra/prometheus/blackbox-exporter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blackbox-exporter
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: blackbox-exporter.k8s.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: blackbox-exporter
            servicePort: 9115
